<resources>
    <string name="app_name">Nodal system</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appbar_scrolling_view_behaviour" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="home_title">NODAL SYSTEMS</string>
    <string name="billing_title">BILLING</string>
    <string name="order_title">ORDERS</string>
    <string name="return_title">RETURN</string>
    <string name="customer_title">CUSTOMERS</string>
    <string name="user_title">USERS</string>
    <string name="changepwd_title">CHANGE PASSWORD</string>
    <string name="report_title">REPORT</string>
    <string name="scheme_title">SCHEME</string>
    <string name="add_customer">ADD CUSTOMER</string>
    <string name="add_user">ADD USER</string>
    <string name="edit_user">EDIT USER</string>
    <string name="edit_customer">EDIT CUSTOMER</string>
    <string name="add_product">ADD PRODUCT</string>
    <string name="add_order">ADD ORDER</string>
    <string name="order_tracking">ORDER TRACKING</string>

    <string name="discount_title">DISCOUNT</string>
    <string name="ok">OK</string>
    <string name="update_title">UPDATE CUSTOMER</string>
    <string name="cancel">CANCEL</string>
    <string name="product_title">PRODUCTS</string>

    <string name="open_nav">Open Nav</string>
    <string name="close_nav">Close Nav</string>


    <string name="radio_active">Active</string>
    <string name="radio_passive">InActive</string>


    <string name="title_user">User</string>
    <string name="title_customer">Customer</string>
    <string name="title_product">Product</string>
    <string name="title_order">Order</string>
    <string name="title_home">Home</string>
</resources>
