<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homepage"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user"
        android:title="@string/title_user"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_customer"
        android:icon="@drawable/customer"
        android:title="@string/title_customer"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_product"
        android:icon="@drawable/product"
        android:title="@string/title_product"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/order_1"
        android:title="@string/title_order"
        app:showAsAction="ifRoom"/>

</menu>